--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bus_seat_booking_mobile_app
+name: online_bus_seat_booking_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  intl: ^0.19.0
+  provider: ^6.0.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
