--- a/Backend/booking_api/Ballerina.toml
+++ b/Backend/booking_api/Ballerina.toml
@@ -8,6 +8,7 @@ distribution = "2201.12.7"
 observabilityIncluded = true
 
 [[platform.java11.dependency]]
-groupId = "mysql"
-artifactId = "mysql-connector-java"
-version = "8.0.26"
+groupId = "com.mysql"
+artifactId = "mysql-connector-j"
+version = "8.2.0"
+
